--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ Werkzeug==3.0.0
 Flask==2.3.2
 flask_sqlalchemy==3.1.1
 SQLAlchemy==2.0.25
+pandas~=2.2.2
+openmeteo_requests~=1.3.0
+python-dotenv~=1.0.1
